--- a/wwr/index.html
+++ b/wwr/index.html
@@ -16,7 +16,7 @@
     <header>
 
         <a id = "logo_link" href = "index.html">
-            <img class = "logo" src = "images/logo.png" alt = "Dry Oar Logo" />
+            <img class = "logo" src = "images/logo.png" alt = "Dry Oar Logo">
         </a>
 
         <nav>
