--- a/w04/index.html
+++ b/w04/index.html
@@ -23,7 +23,7 @@
         <li>Baptism by immersion for the remission of sins</li>
         <li>Laying on of hands for the gift of the Holy Ghost</li>
     </ol>
-    <img src = "images\russell_nelson_official_portrait_2018.jpeg">
+    <img id = "nelson" src = "images\russell_nelson_official_portrait_2018.jpeg">
     <h2>
         "Because of the Savior's Atonement, His gospel provides an invitation to keep changing, growing, and 
         becoming more pure."
