--- a/wwr/index.html
+++ b/wwr/index.html
@@ -1,73 +1,71 @@
 <!DOCTYPE html>
-<html lang='en'>
+<html lang="en">
 <head>
-    <meta charset='UTF-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-    <link rel='stylesheet' href='styles/style.css'>
-    <title>Whitewater Rafting Tours | Dry Oar Boating | Home</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dry Oar Rafting</title>
+    <link href="styles/style.css" rel="stylesheet">
 </head>
 <body>
-    <div id='content'>
+    <div id="content">
         <header>
-            <a id='logo_link' href='index.html'><img class='logo' src='images/logo.png' alt='Dry Oar Logo'></a>
+            <a id="logo_link" href="index.html">
+                <img class="logo" src="images/logo.png" alt="Dry Oar logo">
+            </a>
             <nav>
-                <a href='index.html'>Home</a>
-                <a href='#'>Page 2</a>
-                <a href='site-plan-rafting.html'>Site Plan</a>
-                <a href='contactus.html'>Contact Us</a>
+                <a href="index.html">Home</a>
+                <a href="rivers.html">Rivers</a>
+                <a href="#">Rates/Dates</a>
+                <a href="#">Contact Us</a>
             </nav>
         </header>
-        <div id='hero'>
-            <div id='hero-box'>
-                <img id='hero-img' src='images/hero.png' alt='People enjoying rafting!'>
-            </div>
-            <section id='hero-msg'>
-                <h1 class='home-title'>Have An Adventure</h1>
-                <h4>Makes Memories with Dry Oar</h4>
-                <div class='button-box'>
-                    <a class='book' href='contactus.html'>Book Now</a>
-                </div>
+        <div id="hero">
+            <section id="hero-box">
+                <img id="hero-img" src="images/hero1.png" alt="People enjoying white water rafting">
             </section>
+            <div id="hero-msg">
+                <h1 class="home-title">Have An Adventure</h1>
+                <h4>Make Memories with Dry Oar </h4>
+                <div class='button-box'>
+                    <a class='book' href="rates.html">Book Now</a>
+                </div>
+            </div>
         </div>
-        <main class='home-grid'>
-            <section class='rivers-card'>
-                <img class='card-img' src='images/rivers.jpg' alt='river in forest'>
-                <img class='icon' src='images/river_icon.png' alt='river icon'>
+        <main class="home-grid">
+            <section class="rivers-card">
+                <img class="mountain" src="images/rivers.jpg" alt="river in forest">
+                <img class="river" src="images/river_icon.png" alt="white water rafting oars">
                 <h2>Rivers</h2>
             </section>
-            <section class='camping-card'>
-                <img class='card-img' src='images/camping.jpg' alt='tent in mountains'>
-                <img class='icon' src='images/fire_icon.png' alt='fire icon'>
+            <section class="camping-card">
+                <img class="camp" src="images/camping.jpg" alt="tent in mountains">
+                <img class="fire" src="images/fire_icon.png" alt="white water rafting oars">
                 <h2>Camping</h2>
             </section>
-            <section class='rapids-card'>
-                <img class='card-img' src='images/rapids.jpg' alt='rafting boat'>
-                <img class='icon' src='images/oars.png' alt='oars icon'>
+            <section class="rapids-card">
+                <img class="boat" src="images/rapids.jpg" alt="white water rafting boat">
+                <img class="oars" src="images/oars.png" alt="white water rafting oars">
                 <h2>Rapids</h2>
             </section>
-            <div id='background'></div>
-            <img class='mountains' src='images/mountains.jpg' alt='Misty mountains'>
-            <section class='msg'>
+            <article id="background"></article>
+            <img class="mountains" src="images/mountains.jpg" alt="Misty mountains">
+            <div class="msg">
                 <h2>More Than Just The Thrill</h2>
-                <p>
-                    Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than
-                    just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the
-                    great outdoors.
-                </p>
-                <a class='join' href='rivers.html'>Join Us</a>
-            </section>
+                <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
+                <a class='join' href="rivers.html">Join Us</a>
+            </div>
         </main>
         <footer>
-            <p>Dry Oar &copy; 2023 - Izzie Vazquez</p>
-            <p><a href='site-plan-rafting.html'>Site Plan</a></p>
-            <p><a href='contactus.html'>Contact Us</a></p>
-            <div class='social'>
-                <a href='https://facebook.com' target='_blank'><img src='images/facebook.png' alt='fb icon'></a>
-                <a href='https://twitter.com' target='_blank'><img src='images/twitter.png' alt='twitter icon'></a>
-                <a href='https://instagram.com' target='_blank'><img src='images/instagram.png' alt='instagram icon'></a>
+            <h3>Dry Oar &copy 2023</h3>
+            <h3><a href="#">Site Plan</a></h3>
+            <h3><a href="#">Contact Us</a></h3>
+            <div class="social">
+                <a href="https://facebook.com"><img src="images/facebook.png" alt="fb icon"></a>
+                <a href="https://twitter.com"><img src="images/twitter.png" alt="twitter icon"></a>
+                <a href="https://instagram.com"><img src="images/instagram.png" alt="instagram icon"></a>
             </div>
         </footer>
-    </div>
+    </div>      
 </body>
 </html>
