Site plan update.

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -58,7 +58,7 @@
         </main>
         <footer>
             <h3>Dry Oar &copy 2023</h3>
-            <h3><a href="#">Site Plan</a></h3>
+            <h3><a href="site-plan-rafting.html">Site Plan</a></h3>
             <h3><a href="#">Contact Us</a></h3>
             <div class="social">
                 <a href="https://facebook.com"><img src="images/facebook.png" alt="fb icon"></a>
