--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -4,44 +4,38 @@
 <head>
   <meta charset="utf-8" />
   <title>Site Plan</title>
-  <link type="text/css" rel="stylesheet" href="styles/site-plan-rafting.css" />
+  <link type="text/css" rel="stylesheet" href="styles\site-plan-rafting.css" />
 </head>
   
 <body>
   <header>
-    <h1>Whitewater Rafting Site Plan</h1>
+    <h1>Dry Oar Site Plan</h1>
     <h2>Izzie Vazquez</h2>
     <h2>WDD 130-04</h2>
   </header>
+
   <main>
-    <!-- ------------------------Steps 2-5------------------------------ -->
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p>[Your purpose here]</p>
-    <!-- change this -->
+    <p>The purpose of this website is to inform the user about white water rafting opportunities in the New Jersey area, as well as safety information about rafting.</p>
 
     <h3>Audience</h3>
-    <p>[Your audience here]</p>
-    <!-- change this -->
+    <p>The intended audience of this site are those looking to plan a rafting trip somwhere in the New Jersey area of the United States. The information here is catered towards newcomers to white water river rafting.</p>
 
     <hr />
     <h2>Branding</h2>
     <h3>Website Logo</h3>
-    <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-    <img src="https://byui-wdd.github.io/wdd130/rafting_images/dryoarlogo.png" alt="Logo image" />
+    <img src="images\dryoarlogo.png" alt="Logo image" />
     <hr />
+    
     <h2>Style Guide</h2>
 
-    <!-- ------------------------Steps 6-9------------------------------ -->
-
     <h3>Color Palette</h3>
-    <!--  The colors you choose for a website are one of the most important decisions you will make. Follow the instructions on the activity in Canvas then return and replace the color codes below with the hex color codes (the 6 digit numbers that show at the bottom of each color) for the colors you have chosen below.  You should have at least 2 colors but do not have to fill in all 4 if you do not need them.  -->
 
-    <!-- Copy and paste the URL to your finished palette below. Replace the href value that is there with yours. Make sure to paste it into both the href value and the content text of the <a> tag -->
     <p>Palette URL:</p>
-    <a href="https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c"
-      target="_blank">https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c</a>
+    <a href="https://coolors.co/134266-78c5d7-fce172-ffffff-728dfc"
+      target="_blank">https://coolors.co/134266-78c5d7-fce172-ffffff-728dfc</a>
 
     <table class="colors">
       <tr>
@@ -50,27 +44,21 @@
         <th>Accent 1</th>
         <th>Accent 2</th>
       </tr>
-      <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
       <tr>
-        <td class="primary">[#396E94]</td>
-        <td class="secondary">[#E7C24F]</td>
-        <td class="accent1">[#A43312]</td>
-        <td class="accent2"></td>
+        <td class="primary">[#78C5D7]</td>
+        <td class="secondary">[#134266]</td>
+        <td class="accent1">[#FCE172]</td>
+        <td class="accent2">[#728DFC]</td>
       </tr>
     </table>
 
-    <!-- ------------------------Steps 10-12------------------------------ -->
-
     <h3>Typography</h3>
-    <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Think also about which of your colors above you might use for background and font colors. -->
 
     <h4>
-      Heading Font: [Font Name here]
-      <!-- change this -->
+      Heading Font: Bebas Neue
     </h4>
     <h4>
-      Paragraph Font: [Font Name here]
-      <!-- change this -->
+      Paragraph Font: Slabo 27px
     </h4>
     <h3>Normal paragraph example</h3>
     <p>
